--- a/beltreview/test.html
+++ b/beltreview/test.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title></title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Belt Reviewer Show</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         {% load staticfiles %}
         <link href="{% static 'review/style.css' %}" rel="stylesheet">
     </head>
@@ -15,7 +14,7 @@
         <div class="reviews">
             <h3>Reviews:</h3>
             <hr>
-            {% for review in book.reveiws.all %}
+            {% for review in book.reviews.all %}
                 <p>Rating: {{review.rating}}</p>
                 <p><a href="/user/{{review.reviewer.id}}">{{review.reviewer.name}}</a> says: {{review.review}}</p>
             <p>Posted on: {{review.created_at}}</p>
